Refactor audit handling and update mgp to v0.0.18
