# docs/swagger.json
@@ -12,19 +12,12 @@
     "paths": {
         "/": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "return 123",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "temp"
+                    "tmp"
                 ],
-                "summary": "return 123",
                 "responses": {
                     "200": {
                         "description": "OK",
